--- a/asset/pages/cart.html
+++ b/asset/pages/cart.html
@@ -212,12 +212,12 @@
     <script src="../js/cart.js"></script>
 
     <script>
-        // Load Header/Footer
-        fetch('header.html').then(r => r.text()).then(d => {
+        // Load Header/Footer from shared components directory
+        fetch('../component/header.html').then(r => r.text()).then(d => {
             document.getElementById('header').innerHTML = d;
             updateCartBadge();
         });
-        fetch('footer.html').then(r => r.text()).then(d => document.getElementById('footer').innerHTML = d);
+        fetch('../component/footer.html').then(r => r.text()).then(d => document.getElementById('footer').innerHTML = d);
 
         // Render Cart
         function renderCartPage() {
