--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BookLover - Learn, Grow, Succeed</title>
     <link rel="stylesheet" href="asset/css/style.css">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">
     <!-- Ionicons -->
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
@@ -17,9 +18,9 @@
     <div id="header"></div>
 
     <!-- Hero Section -->
-    <section class="hero">
+    <section class="hero" data-aos="fade-up">
         <div class="container hero-content">
-            <div class="hero-text">
+            <div class="hero-text" data-aos="fade-right">
                 <span class="hero-tag">🚀 Start your journey today</span>
                 <h1>Learn, Grow, <br><span>Succeed.</span></h1>
                 <p>Dive into a world of knowledge with our top-rated books and courses. Tailored learning paths to help
@@ -53,7 +54,7 @@
                 </div>
             </div>
 
-            <div class="hero-visual">
+            <div class="hero-visual" data-aos="fade-left" data-aos-delay="150">
                 <!-- Background Blob -->
                 <div class="hero-blob"></div>
 
@@ -95,8 +96,8 @@
     </section>
 
     <!-- Top Categories -->
-    <section class="categories-section container">
-        <div class="section-header center-text reveal">
+    <section class="categories-section container" data-aos="fade-up">
+        <div class="section-header center-text reveal" data-aos="fade-up">
             <span class="pill-badge">Explore</span>
             <h2>Browse Top Categories</h2>
             <p>Dive into our most popular genres and find your next obsession.</p>
@@ -104,7 +105,7 @@
 
         <div class="cat-grid">
             <!-- Card 1 -->
-            <div class="cat-card glass reveal">
+            <div class="cat-card glass reveal" data-aos="zoom-in" data-aos-delay="50">
                 <div class="cat-bg" style="background: linear-gradient(135deg, #FF6B6B, #db3636);"></div>
                 <div class="cat-icon c-1">
                     <ion-icon name="bulb-outline"></ion-icon>
@@ -115,7 +116,7 @@
             </div>
 
             <!-- Card 2 -->
-            <div class="cat-card glass reveal">
+            <div class="cat-card glass reveal" data-aos="zoom-in" data-aos-delay="100">
                 <div class="cat-bg" style="background: linear-gradient(135deg, #4D96FF, #2968c2);"></div>
                 <div class="cat-icon c-2">
                     <ion-icon name="code-slash-outline"></ion-icon>
@@ -126,7 +127,7 @@
             </div>
 
             <!-- Card 3 -->
-            <div class="cat-card glass reveal">
+            <div class="cat-card glass reveal" data-aos="zoom-in" data-aos-delay="150">
                 <div class="cat-bg" style="background: linear-gradient(135deg, #6BCB77, #459650);"></div>
                 <div class="cat-icon c-3">
                     <ion-icon name="language-outline"></ion-icon>
@@ -137,7 +138,7 @@
             </div>
 
             <!-- Card 4 -->
-            <div class="cat-card glass reveal">
+            <div class="cat-card glass reveal" data-aos="zoom-in" data-aos-delay="200">
                 <div class="cat-bg" style="background: linear-gradient(135deg, #FFD93D, #dcb20c);"></div>
                 <div class="cat-icon c-4">
                     <ion-icon name="rocket-outline"></ion-icon>
@@ -150,8 +151,8 @@
     </section>
 
     <!-- Core Principles: Creative 3D Panels -->
-    <section class="principles-section container reveal">
-        <div class="section-header center-text">
+    <section class="principles-section container reveal" data-aos="fade-up">
+        <div class="section-header center-text" data-aos="fade-up">
             <span class="pill-badge">Our DNA</span>
             <h2>Our Core Principles</h2>
             <p>The values that drive every decision we make.</p>
@@ -159,7 +160,7 @@
 
         <div class="principles-wrapper">
             <!-- 01 -->
-            <div class="prin-card p-card-1 glass">
+            <div class="prin-card p-card-1 glass" data-aos="flip-left">
                 <div class="bg-number">01</div>
                 <div class="p-icon"><ion-icon name="diamond-outline"></ion-icon></div>
                 <div class="p-content">
@@ -169,7 +170,7 @@
             </div>
 
             <!-- 02 -->
-            <div class="prin-card p-card-2 glass">
+            <div class="prin-card p-card-2 glass" data-aos="flip-left" data-aos-delay="100">
                 <div class="bg-number">02</div>
                 <div class="p-icon"><ion-icon name="people-outline"></ion-icon></div>
                 <div class="p-content">
@@ -179,7 +180,7 @@
             </div>
 
             <!-- 03 -->
-            <div class="prin-card p-card-3 glass">
+            <div class="prin-card p-card-3 glass" data-aos="flip-left" data-aos-delay="200">
                 <div class="bg-number">03</div>
                 <div class="p-icon"><ion-icon name="leaf-outline"></ion-icon></div>
                 <div class="p-content">
@@ -191,16 +192,16 @@
     </section>
 
     <!-- Why Choose Us: Bento Grid -->
-    <section class="benefits-section container">
-        <div class="section-header center-text reveal">
+    <section class="benefits-section container" data-aos="fade-up">
+        <div class="section-header center-text reveal" data-aos="fade-up">
             <span class="pill-badge">Why Us?</span>
             <h2>Experience the Difference</h2>
             <p>A platform built with passion for the passionate.</p>
         </div>
 
-        <div class="bento-grid">
+        <div class="bento-grid" data-aos="fade-up" data-aos-delay="50">
             <!-- Large Feature Card -->
-            <div class="bento-card b-large reveal">
+            <div class="bento-card b-large reveal" data-aos="zoom-in">
                 <img src="https://images.unsplash.com/photo-1481627834876-b7833e8f5570?auto=format&fit=crop&w=800&q=80"
                     alt="Library">
                 <div class="bento-content">
@@ -213,7 +214,7 @@
 
             <!-- Right Column Stack -->
             <div class="bento-col">
-                <div class="bento-card b-small reveal-right">
+                <div class="bento-card b-small reveal-right" data-aos="fade-left">
                     <div class="bento-icon i-orange"><ion-icon name="people"></ion-icon></div>
                     <div>
                         <h3>Global Community</h3>
@@ -221,7 +222,8 @@
                     </div>
                 </div>
 
-                <div class="bento-card b-small reveal-right" style="transition-delay: 0.1s;">
+                <div class="bento-card b-small reveal-right" style="transition-delay: 0.1s;" data-aos="fade-left"
+                    data-aos-delay="100">
                     <div class="bento-icon i-blue"><ion-icon name="trending-up"></ion-icon></div>
                     <div>
                         <h3>Track Growth</h3>
@@ -229,7 +231,8 @@
                     </div>
                 </div>
 
-                <div class="bento-card b-stats reveal-right" style="transition-delay: 0.2s;">
+                <div class="bento-card b-stats reveal-right" style="transition-delay: 0.2s;" data-aos="fade-left"
+                    data-aos-delay="200">
                     <div class="stat-box">
                         <strong>98%</strong>
                         <span>Satisfaction</span>
@@ -244,9 +247,9 @@
     </section>
 
     <!-- Section 1: Book Spotlight / Featured (Creative 3D) -->
-    <section class="spotlight-section reveal">
+    <section class="spotlight-section reveal" data-aos="fade-up">
         <div class="container spotlight-content">
-            <div class="spotlight-visual">
+            <div class="spotlight-visual" data-aos="zoom-in">
                 <div class="spotlight-circle"></div>
                 <img src="https://images.unsplash.com/photo-1544947950-fa07a98d237f?auto=format&fit=crop&q=80&w=600"
                     alt="Book of the Month" class="spotlight-book">
@@ -254,7 +257,7 @@
                     <span>#1 Best Seller</span>
                 </div>
             </div>
-            <div class="spotlight-text">
+            <div class="spotlight-text" data-aos="fade-left" data-aos-delay="150">
                 <span class="pill">Book of the Month</span>
                 <h2>The Art of Impossible</h2>
                 <p>Unlock your hidden potential with this groundbreaking guide to peak performance. A masterpiece of
@@ -278,7 +281,7 @@
     </section>
 
     <!-- Section 2: Moving Testimonials (Marquee style) -->
-    <section class="reviews-section reveal">
+    <section class="reviews-section reveal" data-aos="fade-up">
         <div class="container">
             <div class="section-header">
                 <h2>Voices of Our Community</h2>
@@ -346,7 +349,16 @@
     <!-- Interactions Script -->
     <script src="asset/js/script.js"></script>
     <script src="asset/js/cart.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            AOS.init({
+                duration: 800,
+                once: true,
+                offset: 80
+            });
+        });
+
         fetch('asset/component/header.html')
             .then(response => response.text())
             .then(data => {
